fix: WebKit contact blob overflow issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -658,7 +658,6 @@ header img {
   left: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
   z-index: -1;
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
